Apply Mellifluous theme across all configs (Ghostty, Starship, Yazi, btop, cava)

--- a/configs/btop/btop.conf
+++ b/configs/btop/btop.conf
@@ -1,10 +1,9 @@
-# btop Configuration
+# btop Configuration (Mellifluous Theme)
 # ~/.config/btop/btop.conf
 # Part of: Cross-Distro Terminal Setup
 
-#* Color theme (using default for now, theming deferred)
-#* Available themes in /usr/share/btop/themes/
-color_theme = "Default"
+#* Use Mellifluous custom theme
+color_theme = "mellifluous"
 
 #* If the theme sets the foreground color
 theme_background = True
@@ -18,8 +17,7 @@ rounded_corners = True
 #* Graph symbols: "braille", "block", "tty"
 graph_symbol = "braille"
 
-#* Presets for menu boxes (cpu, mem, net, proc)
-#* Format: "cpu:0:default,mem:0:default,net:0:default,proc:0:default"
+#* Presets for menu boxes
 presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:default cpu:0:block,net:0:tty"
 
 #* Show boxes: "cpu mem net proc"
@@ -28,88 +26,46 @@ shown_boxes = "cpu mem net proc"
 #* Update rate in milliseconds (min 100)
 update_ms = 1500
 
-#* Processes sorting: "pid", "program", "arguments", "threads", "user", "memory", "cpu lazy", "cpu direct"
+#* Processes sorting
 proc_sorting = "cpu lazy"
-
-#* Reverse sorting order
 proc_reversed = False
-
-#* Show process tree
 proc_tree = False
-
-#* Process per core graph
 proc_per_core = True
-
-#* Process filter always showing
 proc_filter_kernel = False
 
-#* Show memory as bytes vs percentages
+#* Memory settings
 mem_graphs = True
-
-#* Memory graph mode: "graph", "bars", "split"
 mem_below_net = False
-
-#* Swap memory
 show_swap = True
 
-#* Show disks widget
+#* Disk settings
 show_disks = True
-
-#* Show I/O stats
 show_io_stat = True
-
-#* I/O mode for disks: "full", "band", "small"
 io_mode = True
 
-#* Network widget
+#* Network settings
 net_download = 100
 net_upload = 100
 net_auto = True
-
-#* Network graph mode
 net_sync = True
 
-#* Show battery stats (if available)
+#* Battery stats
 show_battery = True
-
-#* Select battery (auto by default)
 selected_battery = "Auto"
 
-#* CPU temp sensor
+#* CPU settings
 cpu_sensor = "Auto"
-
-#* Show cpu temperature
 show_coretemp = True
-
-#* Temperature celsius
 temp_scale = "celsius"
-
-#* Show GPU stats (if supported)
 show_gpu_info = "Auto"
 
-#* Update on window resize
+#* Display
 force_tty = False
-
-#* Enable base 10 instead of base 2 for memory
 base_10_sizes = False
-
-#* Short hostname display
 show_hostname = True
-
-#* Background redraw offset
 background_update = True
-
-#* Custom CPU name
 custom_cpu_name = ""
-
-#* Disks filter
 disks_filter = ""
-
-#* Only physical cores for the graph
 only_physical = True
-
-#* Enable vim keys
 vim_keys = True
-
-#* Logging
 log_level = "WARNING"
