--- a/configs/ghostty/config
+++ b/configs/ghostty/config
@@ -16,15 +16,45 @@ font-feature = liga
 # font-variation-italic = slnt=-12
 
 # ============================================================================
-# Appearance
+# Appearance - Mellifluous Dark Theme (Hardcoded)
 # ============================================================================
-# Using default theme for now (theming deferred)
-# theme = mellifluous
+# A pleasant, muted colorscheme with warm tones
+# Source: https://github.com/ramojus/mellifluous.nvim
+
+# Background and foreground
+background = 1a1a1a
+foreground = dadada
+
+# Cursor
+cursor-color = bfad9e
+cursor-text = 1a1a1a
+
+# Selection
+selection-background = 2d2d2d
+selection-foreground = c0af8c
+
+# 16-color palette (Normal colors 0-7, Bright colors 8-15)
+palette = 0=#1a1a1a
+palette = 1=#d29393
+palette = 2=#b3b393
+palette = 3=#cbaa89
+palette = 4=#a8a1be
+palette = 5=#b39fb0
+palette = 6=#c0af8c
+palette = 7=#dadada
+palette = 8=#5b5b5b
+palette = 9=#c95954
+palette = 10=#828040
+palette = 11=#a6794c
+palette = 12=#5a6599
+palette = 13=#9c6995
+palette = 14=#74a39e
+palette = 15=#ffffff
 
 # Window
 background-opacity = 0.95
-window-padding-x = 8
-window-padding-y = 8
+window-padding-x = 10
+window-padding-y = 10
 window-decoration = true
 
 # Cursor
